--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "main": "./ts/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "pushd physics
-	&& wasm-pack build --target web --release
-	&& popd
-	&& watchify ./ts/index.ts -p [ tsify --noImplicitAny ] -o ./compiled.js"
+    "compile": "./build-wasm.sh; watchify ./ts/index.ts -p [ tsify --noImplicitAny ] -o ./compiled.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "tsify": "^5.0.4",
     "typescript": "^4.8.4",
-    "watchify": "^4.0.0"
+    "watchify": "^4.0.0",
+    "physics": "file:./physics/pkg"
   }
 }
